--- a/Programacion/KL_APP/src/Vista/CRUDPresidentes/dInsertarPresidente.form
+++ b/Programacion/KL_APP/src/Vista/CRUDPresidentes/dInsertarPresidente.form
@@ -48,12 +48,12 @@
                           <text value="Insertar"/>
                         </properties>
                       </component>
-                      <component id="67319" class="javax.swing.JButton">
+                      <component id="67319" class="javax.swing.JButton" binding="buttonCancel">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Borrar"/>
+                          <text value="Cancelar"/>
                         </properties>
                       </component>
                     </children>
