--- a/Programacion/KL_APP/src/Vista/CRUDEquiposStaff/dBorrarEquiposStaff.form
+++ b/Programacion/KL_APP/src/Vista/CRUDEquiposStaff/dBorrarEquiposStaff.form
@@ -73,7 +73,7 @@
                   <text value="idStaff"/>
                 </properties>
               </component>
-              <component id="5edce" class="javax.swing.JTextField" binding="tfUsername">
+              <component id="5edce" class="javax.swing.JTextField" binding="tfID">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
